# pybank

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  requirements.txt
src/pybank/: __init__.py
tests/: test_pybank.py
