[tool.poetry]
name = "pybank"
version = "0.2.0"
description = "Controle Financeiro para faturas de crédito e débito"
authors = ["Gabriel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
