[tool.poetry]
name = "pybank"
version = "0.2.0"
description = "Controle Financeiro para faturas de crédito e débito"
authors = ["Gabriel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
datetime = "^5.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
